--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Example of marketplace web application using the Nodejs-Express technology",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +22,13 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "mongoose": "^7.2.0",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
