--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "mongoose": "^7.2.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
